force-app/main/default/objects/Lead/fields/Client_Sector__c.field-meta.xml
<CustomField>
    <fullName>Client_Sector__c</fullName>
    <label>Client Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private Sector</fullName>
            </value>
            <value>
                <fullName>Public Sector</fullName>
            </value>
            <value>
                <fullName>Semi-public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>