force-app/main/default/objects/Lead/fields/Entreprise_Number__c.field-meta.xml
<CustomField>
    <fullName>Entreprise_Number__c</fullName>
    <label>Entreprise Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>